--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -2,85 +2,20 @@
 
 <div class="ui stackable grid">
   <div class="backdrop sf-skyline sixteen wide column">
-    <div class="backdrop-words one wide column center">Freedom</div>
+    <div class="backdrop-words one wide column center">Send Apps &amp; Links to yourself</div>
+    <div class="backdrop-words">Instantly from the Web to your phone.</div>
+    <div class="backdrop-words sixteen wide column ac" style="text-transform:uppercase;"><button class="ui button blue">Download Chrome Extension</button></div>
   </div>
   <div class="backdrop-cover"></div>
+</div>
 
-  <div class="two wide column">
+<div class="ui stackable grid">
+
+</div>
+
+<div class="ui stackable grid">
+  <div class="sixteen wide column ac dark-box" style="background-color:black; height: 120px; color:#fff;vertical-align:center; margin-bottom: 0; padding-top:15px;font-size:42px;font-weight:500;">Double Your Downloads, <br /><a href="javascript:;" style="color:#fff; text-decoration:underline;">Enable Your Website</a> to Sync with User's Phones.</div>
+  <div class="backdrop double-vision-image sixteen wide column">
   </div>
 </div>
 
-<div class="ui fluid grid stackable">
-  <div class="two wide column signup-related"></div>
-  <div class="twelve wide column signup">
-    <form>
-      <div class="ui form fluid grid stackable">
-        <div class="ui left labeled icon input eight wide column">
-          <input type="email" name="email" placeholder="Email" id="email" style="padding-left:1em !important; padding-right:1em !important;" />
-          <br />
-          <div class="ui pointing dropdown link item error email-error">
-            <div class="menu">
-              <div class="title">Whoops</div>
-              <a class="item"></a>
-            </div>
-          </div>
-        </div>
-        <div class="ui labeled four wide column type-label ac" style="margin-top: 2em;">
-          <div>I am
-            <div class="ui dropdown inline type-of-user">
-              <div class="text">interested</div>
-              <i class="dropdown icon"></i>
-                <div class="menu">
-                  <div class="item active" data-text="interested" data-value="interested">interested</div>
-                  <div class="item" data-text="in need" data-value="receiver">in need</div>
-                  <div class="item" data-text="a donor" data-value="donor">a donor</div>
-                </div>
-            </div>
-          </div>
-        </div>
-        <div class="ui icon input four wide column ac">
-          <div class="ui green submit button sign-up">Join Waitlist</div>
-        </div>
-      </div>
-    </form>
-  </div>
-
-  <br />
-
-  <div class="sixteen wide column success">
-    <div>Thanks for signing up</div>
-    <div>Your place on the waitlist is <span class="waitlist_number"></span>.</div>
-  </div>
-</div>
-
-<div class="ui fluid stackable grid">
-  <div class="two wide column"></div>
-  <div class="twelve wide column">
-    <article>
-      <section class="main ui fluid stackable grid">
-        <div class="eight wide column">
-          <h2>The Base Income Organization (BIO) is a way for generous people to give to the poor without having to employ them or give it to them on the street.</h2> 
-          <br />
-          <h2>We are the way to donate money to those in need directly and transparently.</h2>
-          <br />
-          <h2>Tax-deductable donations go directly to people whose identities and needs have been verified.</h2>
-          <br />
-          <h2>A small portion is taken from those donations for administrative, transaction and server costs, while the rest goes to people.</h2>
-        </div>
-
-        <div class="eight wide column">
-          <div class="left-image" style="background-image:url(/images/hands.png);"></div>
-        </div>
-
-      </section>
-
-      <hr class="style-two" />
-
-      <section>BIO is an effort in creating a safety net for Americans,  starting with the homeless, impoverished, and the less well off. Long-term plans involve providing basic income to everyone.</section>
-
-      <!-- <section>Giving a consistent and regular income to a person changes what they can aspire to. It creates the conditions for shelter, hygiene and health, which are necessary for employment. With a stable base income, they can focus on getting back up on their feet.  People will have sufficient money, food, time, and be able to do things that make a human feel complete and whole, and  live a fulfilled life.</section> -->
-
-      <section>Expect a working beta out in Q3, 2014.  Sign up to join the waitlist today.</section> 
-    </article>
-  </div>
-</div>
