--- a/views/partials/home-header.handlebars
+++ b/views/partials/home-header.handlebars
@@ -5,7 +5,7 @@
   <div class="eight wide column">
     <a href="/" class="logo">
       <h1>
-        <span>B</span>ase <span style="margin-left:4px;">I</span>ncome <span>O</span>rganization
+        <span style="font-weight:600;">double</span>vision
       </h1>
     </a>
   </div>
