--- a/public/css/home.css
+++ b/public/css/home.css
@@ -65,15 +65,17 @@ table{border-collapse:collapse;border-spacing:0}
 .clearfix{clear:both}.clearfix:last-of-type{border-bottom:none}
 .clearfix:before,.clearfix:after{display:table;content:"";line-height:0}
 .clearfix:after{clear:both}
-header{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;width:100%;border-bottom:1px #ccc solid;-webkit-box-shadow:0 2px 2px 0 rgba(220,220,220,0.4);-moz-box-shadow:0 2px 2px 0 rgba(220,220,220,0.4);box-shadow:0 2px 2px 0 rgba(220,220,220,0.4);position:fixed;z-index:12;background-color:white}header .logo,header .logo:hover,header .logo a,header .logo a:hover{text-decoration:none;color:#e02e00}header .logo span,header .logo:hover span,header .logo a span,header .logo a:hover span{color:#e02e00}
+body{background-color:black}
+header{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;width:100%;position:fixed;z-index:12;background-color:transparent}header .logo,header .logo:hover,header .logo a,header .logo a:hover{text-decoration:none;color:#000}header .logo span,header .logo:hover span,header .logo a span,header .logo a:hover span{color:#000}
 header .logo h1,header .logo:hover h1,header .logo a h1,header .logo a:hover h1{font-size:1.6em}
+.splash{position:absolute;z-index:11;text-align:center;width:100%;left:-45px}
 .fr{float:right}
 body{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;color:#333;-webkit-font-smoothing:antialiased;font-weight:200}
 .ac{text-align:center !important}
 .ar{text-align:right !important}
 .al{text-align:left !important}
-.backdrop{font-family:"HelveticaNeue-UltraLight","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;height:580px;margin-top:0 !important;position:relative;z-index:-1}.backdrop .backdrop-words{color:#fff;text-align:center;position:relative;top:300px;font-size:3em;font-weight:500;z-index:-1}
-.dark-box{font-family:"HelveticaNeue-UltraLight","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif}
+.backdrop{font-family:"HelveticaNeue-UltraLight","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;margin-top:0 !important;position:relative;z-index:10}.backdrop .backdrop-words{color:#fff;text-align:center;position:relative;top:350px;font-size:3em;font-weight:500;z-index:12}
+.dark-box{font-family:"HelveticaNeue-UltraLight","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;margin-bottom:20px;position:relative;z-index:100}
 .main h1,.main h2{font-style:normal;color:#000;font-size:30px;line-height:36px;font-weight:200}
 .main h1{font-size:1.7142em;line-height:1.1666em}
 .main h2{font-size:1.6262em;line-height:1.1333em}
@@ -83,7 +85,7 @@ body{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",H
 @media (min-width:320px) and (max-width:568px){.left-image{background-position:0 -69px;height:320px;margin-top:0}}@media (min-width:568px) and (max-width:768px){.left-image{background-position:0 -160px;height:360px;margin-top:0}}@media (min-width:768px) and (max-width:1024px){.left-image{background-position:0 -50px;height:500px;margin-top:0}}@media (min-width:1024px) and (max-width:1200px){.left-image{background-position:0 -120px;height:600px;margin-top:0}}section{vertical-align:top}
 .ac{text-align:center}
 .sf-skyline{background-image:url("/images/sf-skyline.png");background-size:cover;background-position:0 -20px;background-repeat:no-repeat;min-height:580px;-webkit-transform:translate-z(0);-moz-transform:translate-z(0);-ms-transform:translate-z(0);-o-transform:translate-z(0);transform:translate-z(0)}
-.double-vision-image{background-image:url("/images/double-vision-image.png");background-size:cover;background-position:0 -100px;background-repeat:no-repeat;min-height:580px;-webkit-transform:translate-z(0);-moz-transform:translate-z(0);-ms-transform:translate-z(0);-o-transform:translate-z(0);transform:translate-z(0)}
+.double-vision-image{background-image:url("/images/messaging.png");background-size:cover;background-position:0 -100px;background-repeat:no-repeat;min-height:580px;-webkit-transform:translate-z(0);-moz-transform:translate-z(0);-ms-transform:translate-z(0);-o-transform:translate-z(0);transform:translate-z(0)}
 article{font-size:24px;line-height:33px;padding:10px}article section{margin-top:10px;margin-bottom:30px}
 article h2{font-size:1.2em;font-weight:600}
 .ui.form input[type="text"],.ui.form input[type="email"]{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif !important;font-size:1.2em !important;font-weight:200}
