--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -1,20 +1,30 @@
 {{>home-header}}
 
-<div class="ui stackable grid">
+
+<div class="splash">
+	<img src="/images/doublevisionsplash.png" />
+</div>
+
+<div class="ui stackable grid" style="padding-bottom:0;margin-top:0;">
   <div class="backdrop sf-skyline sixteen wide column">
     <div class="backdrop-words one wide column center">Send Apps &amp; Links to yourself</div>
     <div class="backdrop-words">Instantly from the Web to your phone.</div>
     <div class="backdrop-words sixteen wide column ac" style="text-transform:uppercase;"><button class="ui button blue">Download Chrome Extension</button></div>
+
+    <div class="backdrop-words sixteen wide column ac">
+    	<a href="#bottom" style="position:relative;z-index:100;color:#fff; text-decoration:none;">
+    		<div style="font-size:28px; margin-top:33px;">Developers</div>
+    		<i class="fa fa-chevron-down" style="font-size:0.90em;"></i>
+    	</a>
+    </div>
   </div>
   <div class="backdrop-cover"></div>
 </div>
 
-<div class="ui stackable grid">
-
-</div>
-
-<div class="ui stackable grid">
-  <div class="sixteen wide column ac dark-box" style="background-color:black; height: 120px; color:#fff;vertical-align:center; margin-bottom: 0; padding-top:15px;font-size:42px;font-weight:500;">Double Your Downloads, <br /><a href="javascript:;" style="color:#fff; text-decoration:underline;">Enable Your Website</a> to Sync with User's Phones.</div>
+<div id="bottom" class="ui stackable grid" style="padding-top:0;margin-top:120px;">
+  <div class="sixteen wide column ac dark-box" style="background-color:black; height: 200px; color:#fff;vertical-align:center;padding-top:15px;font-size:42px;font-weight:500;">Double Your Downloads, <br />&lt;with just two lines of code /&gt;
+  <div class="sixteen wide column ac" style="text-transform:uppercase;"><button class="ui button blue">Get the Code</button></div>
+  </div>
   <div class="backdrop double-vision-image sixteen wide column">
   </div>
 </div>
