--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -14,7 +14,7 @@
     <div class="backdrop-words sixteen wide column ac">
     	<a href="#bottom" style="position:relative;z-index:100;color:#fff; text-decoration:none;">
     		<div style="font-size:28px; margin-top:33px;">Developers</div>
-    		<i class="fa fa-chevron-down" style="font-size:0.90em;"></i>
+    		<i class="fa fa-chevron-down" style="font-size:0.90em; color:#666;"></i>
     	</a>
     </div>
   </div>
