--- a/less/home.less
+++ b/less/home.less
@@ -45,7 +45,7 @@ header {
   // border-bottom:1px #ccc solid;
   // .box-shadow(0 2px 2px 0 rgba(220,220,220,0.4));
 
-  position:fixed;
+  position:absolute;
   z-index:12;
   background-color:transparent;
 }
@@ -341,4 +341,10 @@ hr.style-two {
     height: auto !important;
     font-size:1.5rem !important;
   }
+}
+
+.ui.form .sign-up {
+  background-color:#3aa63b;
+  margin-top:0;
+  font-weight:400;
 }
