--- a/views/home/index.handlebars
+++ b/views/home/index.handlebars
@@ -23,9 +23,44 @@
 
 <div id="bottom" class="ui stackable grid" style="padding-top:0;margin-top:120px;">
   <div class="sixteen wide column ac dark-box" style="background-color:black; height: 200px; color:#fff;vertical-align:center;padding-top:15px;font-size:42px;font-weight:500;">Double Your Downloads, <br />&lt;with just two lines of code /&gt;
-  <div class="sixteen wide column ac" style="text-transform:uppercase;"><button class="ui button blue">Get the Code</button></div>
+  <div class="sixteen wide column ac" style="text-transform:uppercase;"><button class="ui button blue code-button">Get the Code</button></div>
   </div>
+
   <div class="backdrop double-vision-image sixteen wide column">
+  </div>
+</div>
+
+<div class="ui modal basic">
+  <div class="content">
+
+    <div class="ui stackable grid">
+      <div id="signup" class="sixteen wide column signup">
+        <form>
+          <div class="ui form fluid grid stackable">
+            <div class="four wide column"></div>
+            <div class="ui left labeled icon input eight wide column signup-field">
+              <input type="email" name="email" placeholder="Email" id="email" style="padding-left:1em !important; padding-right:1em !important;" />
+              <br />
+              <div class="ui pointing dropdown link item error email-error">
+                <div class="menu">
+                  <div class="title">Sorry</div>
+                  <a class="item"></a>
+                </div>
+              </div>
+            </div>
+            <div class="ui icon input one wide column ac">
+              <div class="ui green submit button sign-up large signup-field">Join</div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <br />
+
+    <div class="sixteen wide column success">
+      <div>Thanks for signing up</div>
+    </div>
   </div>
 </div>
 
