--- a/public/css/home.css
+++ b/public/css/home.css
@@ -82,10 +82,10 @@ body{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",H
 .left-image{width:100%;height:500px;margin-top:20px;display:inline-block;background-size:cover;background-position:0 -120px;background-repeat:no-repeat;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;padding:0}
 #email{width:95%;margin-left:10px}
 .email-error{margin-left:40px}.email-error a.item{line-height:24px !important}
-@media (min-width:320px) and (max-width:568px){.left-image{background-position:0 -69px;height:320px;margin-top:0}}@media (min-width:568px) and (max-width:768px){.left-image{background-position:0 -160px;height:360px;margin-top:0}}@media (min-width:768px) and (max-width:1024px){.left-image{background-position:0 -50px;height:500px;margin-top:0}}@media (min-width:1024px) and (max-width:1200px){.left-image{background-position:0 -120px;height:600px;margin-top:0}}section{vertical-align:top}
-.ac{text-align:center}
 .sf-skyline{background-image:url("/images/sf-skyline.png");background-size:cover;background-position:0 -20px;background-repeat:no-repeat;min-height:580px;-webkit-transform:translate-z(0);-moz-transform:translate-z(0);-ms-transform:translate-z(0);-o-transform:translate-z(0);transform:translate-z(0)}
 .double-vision-image{background-image:url("/images/messaging.png");background-size:cover;background-position:0 0px;background-repeat:no-repeat;min-height:580px;-webkit-transform:translate-z(0);-moz-transform:translate-z(0);-ms-transform:translate-z(0);-o-transform:translate-z(0);transform:translate-z(0);position:relative;z-index:20;top:-50px}
+@media (min-width:320px) and (max-width:568px){.left-image{background-position:0 -69px;height:320px;margin-top:0} .double-vision-image{top:0}}@media (min-width:568px) and (max-width:768px){.left-image{background-position:0 -160px;height:360px;margin-top:0}}@media (min-width:768px) and (max-width:1024px){.left-image{background-position:0 -50px;height:500px;margin-top:0}}@media (min-width:1024px) and (max-width:1200px){.left-image{background-position:0 -120px;height:600px;margin-top:0}}section{vertical-align:top}
+.ac{text-align:center}
 article{font-size:24px;line-height:33px;padding:10px}article section{margin-top:10px;margin-bottom:30px}
 article h2{font-size:1.2em;font-weight:600}
 .ui.form input[type="text"],.ui.form input[type="email"]{font-family:"HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif !important;font-size:1.2em !important;font-weight:200}
