Revert "This seems like a better fix"
This reverts commit 55ab7367dcecc17174bb4d23afbecac58cc7f6f1.

--- a/less/home.less
+++ b/less/home.less
@@ -171,6 +171,7 @@ body {
   .transform(translate-z(0));
   position:relative;
   z-index:20;
+  top:-50px;
 }
 
 @media (min-width: 320px) 
@@ -179,6 +180,10 @@ and (max-width : 568px) {
     background-position:0 -69px;
     height:320px;
     margin-top:0;
+  }
+
+  .double-vision-image  {
+    top:0;
   }
 }
 
